--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
     <!-- Manifest -->
     <link rel="manifest" href="./manifest.json" type="application/json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Youga & Nanda Wedding Invitaion</title>
+    <title>Youga & Nanda Wedding Invitation</title>
+    
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
     <meta name="title" content="Wedding Invitation">
-    <meta name="description" content="Youga & Nanda Wedding Invitation">
+    <meta name="description" content="Youga & Nanda Wedding Invitation. Join us in our celebration!">
+
+    <!-- Open Graph Meta Tags (for WhatsApp, Facebook, etc.) -->
+    <meta property="og:title" content="Wedding Invitation">
+    <meta property="og:description" content="Youga & Nanda Wedding Invitation. Join us in our celebration!">
+    <meta property="og:url" content="https://nanda-jouga-wedding.harjonan.id">
+    <meta property="og:image" content="https://nanda-jouga-wedding.harjonan.id/icons/favicon-32x32.png"> <!-- Link to your image -->
+    <meta property="og:type" content="website">
+    <meta property="og:image:width" content="32">
+    <meta property="og:image:height" content="32">
+
+    <!-- Twitter Meta Tags (optional, for Twitter cards) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Wedding Invitation">
+    <meta name="twitter:description" content="Youga & Nanda Wedding Invitation. Join us in our celebration!">
+    <meta name="twitter:image" content="https://yourwebsite.com/path-to-32x32.png"> <!-- Same or a different image URL -->
 
   </head>
   <body>
